changed travis yml 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t jean9116/multi-nginx ./nginx
   - docker build -t jean9116/multi-server ./server
   - docker build -t jean9116/multi-worker ./worker
-  # Log in to the docker CLI
+  # Log in to the docker CLI--dockerhub
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push jean9116/multi-client
