--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t jean9116/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t jck9116/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true jean9116/react-test npm test
+  - docker run -e CI=true jck9116/react-test npm test
 
 after_success:
-  - docker build -t jean9116/multi-client ./client
-  - docker build -t jean9116/multi-nginx ./nginx
-  - docker build -t jean9116/multi-server ./server
-  - docker build -t jean9116/multi-worker ./worker
+  - docker build -t jck9116/multi-client ./client
+  - docker build -t jck9116/multi-nginx ./nginx
+  - docker build -t jck9116/multi-server ./server
+  - docker build -t jck9116/multi-worker ./worker
   # Log in to the docker CLI--dockerhub
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push jean9116/multi-client
-  - docker push jean9116/multi-nginx
-  - docker push jean9116/multi-server
-  - docker push jean9116/multi-worker
+  - docker push jck9116/multi-client
+  - docker push jck9116/multi-nginx
+  - docker push jck9116/multi-server
+  - docker push jck9116/multi-worker
